test/libyul/yulSyntaxTests/builtin_identifier_6.yul
{
	// Test for the unreachable 6272_error
	add := 1
}
// ----
// ParserError 2314: (47-49): Expected '(' but got ':='
